# AnDS

coursework/: 2372_НауменкоАВ Отчёт.docx  application.cpp  application.h  input.txt  output.txt
coursework/structures/: dsu.cpp  dsu.h  graph.cpp  graph.h
practice01/: CMakeLists.txt  application.cpp  application.h  main.cpp  rpn.h
practice01/structures/: dl_list.cpp  dynamic_array.cpp  dynamic_array.h  stack.h
practice02/: application.cpp  application.h  quicksort.h  timsort.h
practice03/: CMakeLists.txt  application.cpp  application.h  input.txt  stack.cpp
practice03/trees/: avl-tree.cpp  bin-tree.h
